--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -4,12 +4,14 @@ dependencies:
 
 build_targets:
   - name: default
+    container: 
+      image: yourbase/yb_ubuntu_ng:18.04
     environment:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
     commands:
       - gem install bundler -v 1.17.3
       - bundle install --gemfile ./gemfiles/Gemfile.rails.5.0.1
-      - bundle exec rspec 
+      - bundle rspec 
 
 ci:
   builds:
