--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -10,8 +10,8 @@ build_targets:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
     commands:
       - gem install bundler -v 1.17.3
-      - bundle install --jobs=1 --retry=1 --gemfile ./gemfiles/Gemfile.rails.5.2.0  
-      - bundle exec rspec 
+      - chmod +x yourbased.sh
+      - ./yourbased.sh
 
 ci:
   builds:
