--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -4,12 +4,12 @@ dependencies:
     - ruby:2.5.0
 
 build_targets:
-  - name: rails-5.master
+  - name: rails.master
     container: 
       image: yourbase/yb_ubuntu_ng_1:18.04
     environment:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
-      - BUNDLE_GEMFILE="./gemfiles/Gemfile.rails.5.master"
+      - BUNDLE_GEMFILE=./gemfiles/Gemfile.rails.master
     commands:
       - gem install bundler -v 1.17.3 
       - bundle install -j4
@@ -19,7 +19,7 @@ build_targets:
       image: yourbase/yb_ubuntu_ng_1:18.04
     environment:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
-      - BUNDLE_GEMFILE="./gemfiles/Gemfile.rails.5.0.1"
+      - BUNDLE_GEMFILE=./gemfiles/Gemfile.rails.5.0.1
     commands:
       - gem install bundler -v 1.17.3 
       - bundle install -j4 
@@ -29,7 +29,7 @@ build_targets:
       image: yourbase/yb_ubuntu_ng_1:18.04
     environment:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
-      - BUNDLE_GEMFILE="./gemfiles/Gemfile.rails.5.1.0"
+      - BUNDLE_GEMFILE=./gemfiles/Gemfile.rails.5.1.0
     commands:
       - gem install bundler -v 1.17.3 
       - bundle install -j4 
@@ -39,7 +39,7 @@ build_targets:
       image: yourbase/yb_ubuntu_ng_1:18.04
     environment:
       - JRUBY_OPTS="-J-Xmx1024m --debug"
-      - BUNDLE_GEMFILE="./gemfiles/Gemfile.rails.5.2.0"
+      - BUNDLE_GEMFILE=./gemfiles/Gemfile.rails.5.2.0
     commands:
       - gem install bundler -v 1.17.3 
       - bundle install -j4 
@@ -53,4 +53,4 @@ ci:
     - name: test-rails-5.2.0
       build_target: rails-5.2.0
     - name: test-rails-5.master
-      build_target: rails-5.master
+      build_target: rails.master
